Page action. Fixed help covering bug.

--- a/pageAction/pageAction.css
+++ b/pageAction/pageAction.css
@@ -1,4 +1,4 @@
-form { padding: 1em 2em; text-align: center }
+form { padding: 1em 5px 1em 30px; margin-right: 25px; text-align: center; background-color: white; }
 
 
 a[name="url"] { display: inline-block; white-space: nowrap; text-decoration: none; margin-left: 20px }
@@ -25,9 +25,11 @@ input[name="url"] { display: none }
 
 
 #help-handle { position: absolute; bottom: 0; right: 0; z-index: 10
-	 width: 20px; height: 20px }
+	 width: 20px; height: 20px; opacity: 0.5; -webkit-transition: opacity 0.8s; }
+	#help-handle:hover { opacity: 1 }
+form { opacity: 1; -webkit-transition: opacity 0.8s; }
 #help { position: absolute; top: 0; right: 25px; left: 0; bottom: 0;
-	background-color: white; opacity: 0;
-	-webkit-transition: opacity 0.8s;}
-	#help-handle:hover + #help { z-index: 5; opacity: 1 }
+	background-color: white; z-index: -2; opacity: 1;
+	}
+	#help-handle:hover + form { opacity: 0 }
 	#help p { margin: 1ex 30px 1ex 1ex }
